<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:cardview="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="locationDetail"
            type="com.sunilsahoo.inventorycontroller.entity.LocationDetail"/>
    </data>

    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        cardview:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">


            <com.sunilsahoo.maplocation.DoubleTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:leftText="@string/name"
                app:rightText="@{locationDetail.name}"/>
            <com.sunilsahoo.maplocation.DoubleTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:leftText="@string/largest_city"
                app:rightText="@{locationDetail.largestCity}"/>
            <com.sunilsahoo.maplocation.DoubleTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:leftText="@string/area"
                app:rightText="@{locationDetail.area}"/>
            <com.sunilsahoo.maplocation.DoubleTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:leftText="@string/capital"
                app:rightText="@{locationDetail.capital}"/>
            <com.sunilsahoo.maplocation.DoubleTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:leftText="@string/country"
                app:rightText="@{locationDetail.country}"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>